--- a/style.css
+++ b/style.css
@@ -1,44 +1,114 @@
-*,::after, ::before{
-      box-sizing: border-box;
+* {
+      font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
-}
-h2{
-      text-align: center;
-      margin-top: 30px;
-}
-form{
-      width: 350px;
+      box-sizing: border-box;
+      outline: none;
+      color: rgb(82, 82, 82);
+    }
+    body {
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       background: gainsboro;
-      height: auto;
+    }
+    form {
+      width: 50%;
+      min-width: 380px;
+      max-width: 600px;
+      background: white;
+      display: grid;
+      grid-template-rows: repeat(4, 104px);
+      padding: 60px 45px 30px;
+      border-radius: 16px;
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
       position: relative;
-      padding: 25px;
-      margin: 0 auto;
-      border-radius: 15px;
-      top: 80px;
-      
-
-}
-input{
-      
-      height: 32px;
-      border-radius: 10px;
-      bottom: 10px;
+    }
+    
+    div {
+      transition: 0.2s;
+    }
+    label {
+      letter-spacing: 1px;
+    }
+    input[type="text"],
+    input[type="password"] {
+      margin: 7px 0 7px;
+      border: 1px solid transparent;
+      background: rgb(235, 244, 242);
+      height: 36px;
+      width: 100%;
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+      border-radius: 9px;
+      font-size: 1.1rem;
+      padding-left: 10px;
+      transition: 0.2s;
+    }
+    input[type="text"]:focus,
+    input[type="password"]:focus {
+      border: 1px solid #5ef9a4;
+    }
+    span {
+      margin-bottom: 20px;
       display: block;
-      margin: 15px auto;
-      border: transparent;   
-
-}
-input:hover{
+      font-size: 0.8rem;
+      visibility: hidden;
+      opacity: 0;
+      transition: 0.3s;
+      color: red;
+    }
+    p {
+      background: red;
+      width: 33%;
+      height: 6px;
+      margin: -2px 0 2px;
+      border-radius: 50px;
+      visibility: hidden;
+      transition: 0.3s;
+    }
+    #security span {
+      display: inline;
+    }
+    input[type="submit"] {
       border: none;
-}
-label{
-      margin-top: 10px;
-}
-.send{
-      width: 100px;
-      margin: 50px auto;
-      border-radius: 15px;
-      background:#5efb47 ;
-}
-
+      background: linear-gradient(65deg, #186f54, #a9cfa0);
+      width: 50%;
+      margin: 12px auto 0;
+      padding: 10px;
+      border-radius: 150px;
+      font-size: 1.2rem;
+      box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
+      cursor: pointer;
+      transition: 0.3s ease;
+    }
+    input[type="submit"]:hover {
+      filter: brightness(105%);
+      transform: translateX(2px);
+    }
+    .error input {
+      color: red;
+      border: 1px solid rgba(255, 0, 0, 0.527);
+    }
+    .error span {
+      visibility: visible;
+      opacity: 1;
+      color: red;
+    }
+    .progressRed {
+      background: red;
+      width: 33%;
+      visibility: visible;
+    }
+    .progressBlue {
+      background: #16d9e7;
+      width: 67%;
+      visibility: visible;
+    }
+    .progressGreen {
+      width: 100%;
+      background: #5ef9a4;
+      visibility: visible;
+    }
+    
