--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
     input[type="password"] {
       margin: 7px 0 7px;
       border: 1px solid transparent;
-      background: rgb(235, 244, 242);
+      background:gainsboro;
       height: 36px;
       width: 100%;
       box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
